--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ dependencies:
   flutter:
     sdk: flutter
     
-  flutter_native_splash: ^2.3.3
   top_snackbar_flutter: ^3.1.0
   loading_animation_widget: ^1.2.0+4
 
@@ -22,7 +21,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
   fonts:
     - family: Poppins
       fonts:
