--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/poppins/Poppins-Regular.ttf
+    - family : Poppins
+      fonts: 
+        - asset: assets/fonts/poppins/Poppins-Medium.ttf
+          weight: 500
     - family: Poppins
       fonts:
         - asset: assets/fonts/poppins/Poppins-Bold.ttf
