--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     
   top_snackbar_flutter: ^3.1.0
   loading_animation_widget: ^1.2.0+4
+  flutter_speed_dial: ^7.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
