--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.1.0
   intl: ^0.18.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
