--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.1.0
   intl: ^0.18.1
   flutter_bloc: ^8.1.3
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
