--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.18.1
   flutter_bloc: ^8.1.3
   flutter_slidable: ^3.0.1
+  flutter_advanced_drawer: ^1.3.5
 
 dev_dependencies:
   flutter_test:
