--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_slidable: ^3.0.1
   flutter_advanced_drawer: ^1.3.5
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
