Implementações no APP
Temporizador para atualizar dados

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,27 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "Celular",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "emulator-5554"
+        },
+        {
+            "name": "Tablet",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "emulator-5556"
+        }
+    ],
+    "compounds": [
+        {
+            "name": "All Devices",
+            "configurations": [
+                "Celular",
+                "Tablet",
+            ]
         }
     ]
 }
