--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_slidable: ^3.0.1
   flutter_advanced_drawer: ^1.3.5
   flutter_secure_storage: ^9.0.0
+  flutter_ringtone_player: ^4.0.0+2
+  vibration: ^1.8.4
 
 dev_dependencies:
   flutter_test:
