--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sgc
 description: A new Flutter project.
 publish_to: 'none'
-version: 1.0.0
+version: 1.0.4
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -13,16 +13,16 @@ dependencies:
   top_snackbar_flutter: ^3.1.0
   loading_animation_widget: ^1.2.0+4
   flutter_speed_dial: ^7.0.0
-  provider: ^6.0.5
+  provider: ^6.1.2
   shared_preferences: ^2.2.2
-  http: ^1.1.0
+  http: ^1.2.0
   intl: ^0.19.0
-  flutter_bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
   flutter_slidable: ^3.0.1
-  flutter_advanced_drawer: ^1.3.5
+  flutter_advanced_drawer: ^1.3.6
   flutter_secure_storage: ^9.0.0
-  flutter_ringtone_player: ^4.0.0+2
   vibration: ^1.8.4
+  flutter_local_notifications: ^16.3.3
 
 dev_dependencies:
   flutter_test:
