Inicio de Tela de Consulta de Estoque

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,8 +32,8 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "br.com.mobisync.separacao_sgc"
-    compileSdkVersion flutter.compileSdkVersion
+    namespace "br.com.sastec.separacao_sgc"
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -51,7 +51,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "br.com.mobisync.separacao_sgc"
+        applicationId "br.com.sastec.separacao_sgc"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
