--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sgc
 description: Sistema SGC Mobile
 publish_to: 'none'
-version: 1.1.5
+version: 1.2.0
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -15,13 +15,14 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
-  http: ^1.2.0
+  http: ^1.2.2
   intl: ^0.19.0
   flutter_bloc: ^8.1.4
   flutter_slidable: ^3.0.1
   flutter_advanced_drawer: ^1.3.6
   flutter_secure_storage: ^9.0.0
-  flutter_local_notifications: ^16.3.3
+  flutter_local_notifications: ^17.2.3
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
