--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sgc
 description: Sistema SGC Mobile
 publish_to: 'none'
-version: 1.2.1
+version: 1.3.3
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -10,7 +10,6 @@ dependencies:
   flutter:
     sdk: flutter
     
-  top_snackbar_flutter: ^3.1.0
   loading_animation_widget: ^1.2.0+4
   flutter_speed_dial: ^7.0.0
   provider: ^6.1.2
@@ -22,7 +21,8 @@ dependencies:
   flutter_advanced_drawer: ^1.3.6
   flutter_secure_storage: ^9.0.0
   flutter_local_notifications: ^17.2.3
-  package_info_plus: ^8.0.2
+  package_info_plus: ^8.1.0
+  version: ^3.0.2
 
 dev_dependencies:
   flutter_test:
