--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   package_info_plus: ^8.1.0
   version: ^3.0.2
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
