--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sgc
 description: Sistema SGC Mobile
 publish_to: 'none'
-version: 1.4.1
+version: 1.5.0
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -24,6 +24,7 @@ dependencies:
   package_info_plus: ^8.1.0
   version: ^3.0.2
   camera: ^0.11.0+2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
